[bug] fix slow drag on mobile devices

--- a/src/sass/partials/formulas.scss
+++ b/src/sass/partials/formulas.scss
@@ -10,7 +10,7 @@
       padding: 0;
       z-index: 2;
       opacity: 1;
-      transition: all $transition-ease-medium;
+      // transition: all $transition-ease-medium;
       &.sortable-chosen {
         opacity: 1;
       }
